--- a/_layouts/join.html
+++ b/_layouts/join.html
@@ -7,7 +7,7 @@ title: Join
         <div class="grid grid-cols-2 items-center">
             <div class="justify-self-start">
                 <h2 class="md:text-5xl text-4xl md:leading-normal leading-normal font-medium">Join our Expanding Team</h2>
-                <p class="text-lg md:leading-normal leading-normal font-medium">Interested in joining our team? Let us know!</p>
+                <p class="text-lg md:leading-normal leading-normal font-medium pb-4">Interested in joining our team? Let us know!</p>
                 <div class="grid-cols-12 mx-8">
                     <a href="forms.gle/A3NF9DCtPMFFEr5UA" target="_blank" class="float-right btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 dark:hover:text-white rounded-md mt-2">Join us</a>
                 </div>
